[package]
name = "rustsec-advisory-db"
description = "Security advisory database for Rust crates published through crates.io"
version = "0.0.0"
authors = ["Tony Arcieri <bascule@gmail.com>"]
license-file = "LICENSE.txt"
repository = "https://github.com/rustsec/advisory-db"
documentation = "https://github.com/rustsec/advisory-db"
categories = ["api-bindings", "development-tools"]
keywords = ["rustsec", "security", "advisory", "vulnerability"]

[[bin]]
name = "rustsec-advisory-db"

[dependencies]
gumdrop = "0.4"
gumdrop_derive = "0.4"
rustsec = "0.9"
reqwest = "0.9"
serde = "1.0"
serde_derive = "1.0"
