[package]
name        = "rustsec-advisory-db"
description = "Security advisory database for Rust crates published through crates.io"
version     = "0.0.0"
authors     = ["Tony Arcieri <bascule@gmail.com>"]
edition     = "2018"
publish     = false

[[bin]]
name = "rustsec-advisory-db"

[dependencies]
gumdrop = "0.5"
gumdrop_derive = "0.5"
rustsec = "0.11"
crates_io_api = "0.3"
